third_party/move/move-vm/transactional-tests/tests/tracing/simple/pop.exp
processed 2 tasks
task 0 lines 1-7:  publish [module 0x22::test]
Error: error: unknown instruction `ldu8`
  ┌─ test:4:5
  │
4 │     ldu8 0
  │     ^^^^^^


task 1 lines 9-9:  run --verbose 0x22::test::pop_instr --display-trace
Error: Function execution failed with VMError: {
    message: Linker Error: Module 0000000000000000000000000000000000000000000000000000000000000022::test doesn't exist,
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
    exec_state: None,
}
